# grpc_ex

./: Cargo.toml
proto/: records.proto
src/: client.rs  server.rs
